# wordle-solver

./: Makefile  README.md  main.py  pyproject.toml
static/: groups_en.pickle  groups_es.pickle  optimal_starts.json  wordlist_es.txt
tests/: conftest.py  test_cache.py  test_filters.py  test_inverted_index.py  test_search_space.py  test_solver.py  test_wordle_index.py
wordle_solver/: cache.py  candidates.py  clue.py  filters.py  inverted_index.py  search_space.py  solver.py  wordle_index.py
